--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,21 @@ body {
   display: flex;
   width: 100vw;
   height: 100vh;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  min-width: 50vw;
 }
 
 .capa1 {
   position: absolute;
   z-index: 1;
+}
+
+.imagen1 {
+  width: 50vw;
+  height: 94.4vh;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .capa2 {
@@ -46,7 +56,7 @@ body {
   font-family: 'Merriweather', serif;
   position: absolute;
   z-index: 6;
-  top: 21vh;
+  top: 16vh;
   padding-left: 60vh;
   color: white;
 }
@@ -58,19 +68,19 @@ body {
   top: 45vh;
   padding-left: 45vh;
   color: white;
-  font-size: xx-large;
+  font-size: xxx-large;
 }
 
 .capa5 {
   position: absolute;
-  padding-left: 139vh;
+  padding-left: 138vh;
   z-index: 5;
-  top: 1.2vh;
+  top: 0.9vh;
 }
 
 .imagen5 {
   width: 25vw;
-  height: 68.5vh;
+  height: 70vh;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -79,12 +89,12 @@ body {
   position: absolute;
   z-index: 8;
   top: 71vh;
-  padding-left: 105vh;
+  padding-left: 103vh;
 }
 
 .loading {
-  width: 15vw;
-  height: 15vh;
+  width: 17vw;
+  height: 20vh;
 }
 
 .prev {
@@ -100,7 +110,7 @@ body {
   position: absolute;
   z-index: 9;
   top: 88vh;
-  padding-left: 108vh;
+  padding-left: 111vh;
   color: lightgray;
 }
 /*# sourceMappingURL=styles.css.map */
