--- a/styles.scss
+++ b/styles.scss
@@ -12,12 +12,21 @@ body{
     display: flex;
     width: 100vw;
     height: 100vh;
-      
+    flex-wrap: wrap;
+    min-width: 50vw;
 }
+
 .capa1{
     position: absolute;
     z-index: 1;
+}
+
+.imagen1{
+    width: 50vw;
+    height: 94.4vh;
+    object-fit:cover;
     
+
 }
 
 .capa2{
@@ -25,17 +34,20 @@ body{
     z-index: 2;
     padding-left: 8vw;
     top: 7vh;
+    
 }
 
 .capa3{
     position: absolute;
     z-index: 3;
     padding-left: 55vh;
-    height:100vh;   
+    height:100vh;
+    
 }
 
 .back{
     height: 94.5vh;
+    
 }
 
 .capa4{
@@ -43,14 +55,16 @@ body{
     z-index: 4;
     padding-left: 60vh;
     top:7vh;
+    
 }
 .capa6{
     font-family: 'Merriweather', serif;
     position: absolute;
     z-index: 6;
-    top: 21vh;
+    top: 16vh;
     padding-left: 60vh;
     color:white;
+    
 }
 .capa7{
     font-family: 'Montserrat', sans-serif;
@@ -59,35 +73,41 @@ body{
     top: 45vh;
     padding-left: 45vh;
     color:white;
-    font-size:xx-large;
+    font-size:xxx-large;
+   
 }
 
 .capa5{
     position: absolute;
-    padding-left: 139vh;
+    padding-left: 138vh;
     z-index: 5;
-    top:1.2vh;
+    top:0.9vh;
+    
 }
 .imagen5{
     width: 25vw;
-    height: 68.5vh;
+    height: 70vh;
     object-fit:cover;
+   
 }
 .capa8{
     position:absolute;
     z-index: 8;
     top: 71vh;
-    padding-left: 105vh;
+    padding-left: 103vh;
+    
 }
 .loading{
-    width: 15vw;
-    height: 15vh;
+    width: 17vw;
+    height: 20vh;
+    
 }
 .prev{
     font-family: 'Merriweather', serif;
     position: absolute;
     z-index: 6;
     color:green
+    
 }
 .capa9{
     font-family: 'Merriweather', serif;
@@ -95,8 +115,9 @@ body{
     position:absolute;
     z-index: 9;
     top: 88vh;
-    padding-left: 108vh;
+    padding-left: 111vh;
     color:lightgray;
+    
 }
 
 
